obsidian-tidy-parser/src/token_stream/interceptor/snapshots/obsidian_tidy_parser__token_stream__interceptor__callout_interceptor__tests__callout_with_markdown_inside.snap
---
source: obsidian-tidy-parser/src/token_stream/interceptor/callout_interceptor.rs
expression: tokens
---
[
    (
        StartCallout(
            Callout {
                kind: "tip",
                header_offset: 2..8,
                foldable: None,
            },
        ),
        0..32,
    ),
    (
        Markdown(
            Start(
                Paragraph,
            ),
        ),
        2..32,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "[",
                ),
            ),
        ),
        2..3,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "!tip",
                ),
            ),
        ),
        3..7,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "]",
                ),
            ),
        ),
        7..8,
    ),
    (
        Markdown(
            SoftBreak,
        ),
        8..9,
    ),
    (
        Markdown(
            Start(
                Strong,
            ),
        ),
        11..19,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "Bold",
                ),
            ),
        ),
        13..17,
    ),
    (
        Markdown(
            End(
                Strong,
            ),
        ),
        11..19,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    " and ",
                ),
            ),
        ),
        19..24,
    ),
    (
        Markdown(
            Start(
                Emphasis,
            ),
        ),
        24..32,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "italic",
                ),
            ),
        ),
        25..31,
    ),
    (
        Markdown(
            End(
                Emphasis,
            ),
        ),
        24..32,
    ),
    (
        Markdown(
            End(
                Paragraph,
            ),
        ),
        2..32,
    ),
    (
        EndCallout,
        0..32,
    ),
]
