obsidian-tidy-parser/src/token_stream/interceptor/snapshots/obsidian_tidy_parser__token_stream__interceptor__callout_interceptor__tests__nested_blockquotes_counter_example.snap
---
source: obsidian-tidy-parser/src/token_stream/interceptor/callout_interceptor.rs
expression: tokens
---
[
    (
        StartCallout(
            Callout {
                kind: "tip",
                header_offset: 2..8,
                foldable: None,
            },
        ),
        0..78,
    ),
    (
        Markdown(
            Start(
                Paragraph,
            ),
        ),
        2..16,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "[",
                ),
            ),
        ),
        2..3,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "!tip",
                ),
            ),
        ),
        3..7,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "]",
                ),
            ),
        ),
        7..8,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    " Start!",
                ),
            ),
        ),
        8..15,
    ),
    (
        Markdown(
            End(
                Paragraph,
            ),
        ),
        2..16,
    ),
    (
        Markdown(
            Start(
                BlockQuote(
                    None,
                ),
            ),
        ),
        18..78,
    ),
    (
        Markdown(
            Start(
                BlockQuote(
                    None,
                ),
            ),
        ),
        20..78,
    ),
    (
        Markdown(
            Start(
                Paragraph,
            ),
        ),
        22..78,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "Super quote",
                ),
            ),
        ),
        22..33,
    ),
    (
        Markdown(
            SoftBreak,
        ),
        33..34,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "End one quote",
                ),
            ),
        ),
        38..51,
    ),
    (
        Markdown(
            SoftBreak,
        ),
        51..52,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "But we still in Callout!",
                ),
            ),
        ),
        54..78,
    ),
    (
        Markdown(
            End(
                Paragraph,
            ),
        ),
        22..78,
    ),
    (
        Markdown(
            End(
                BlockQuote(
                    None,
                ),
            ),
        ),
        20..78,
    ),
    (
        Markdown(
            End(
                BlockQuote(
                    None,
                ),
            ),
        ),
        18..78,
    ),
    (
        EndCallout,
        0..78,
    ),
]
