obsidian-tidy-parser/src/token_stream/interceptor/snapshots/obsidian_tidy_parser__token_stream__interceptor__callout_interceptor__tests__tags_are_balanced.snap
---
source: obsidian-tidy-parser/src/token_stream/interceptor/callout_interceptor.rs
expression: tokens
---
[
    (
        StartCallout(
            Callout {
                kind: "tip",
                header_offset: 2..8,
                foldable: None,
            },
        ),
        0..65,
    ),
    (
        Markdown(
            Start(
                Paragraph,
            ),
        ),
        2..21,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "[",
                ),
            ),
        ),
        2..3,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "!tip",
                ),
            ),
        ),
        3..7,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "]",
                ),
            ),
        ),
        7..8,
    ),
    (
        Markdown(
            SoftBreak,
        ),
        8..9,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "Content 1",
                ),
            ),
        ),
        11..20,
    ),
    (
        Markdown(
            End(
                Paragraph,
            ),
        ),
        2..21,
    ),
    (
        StartCallout(
            Callout {
                kind: "warning",
                header_offset: 27..37,
                foldable: None,
            },
        ),
        25..52,
    ),
    (
        Markdown(
            Start(
                Paragraph,
            ),
        ),
        27..52,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "[",
                ),
            ),
        ),
        27..28,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "!warning",
                ),
            ),
        ),
        28..36,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "]",
                ),
            ),
        ),
        36..37,
    ),
    (
        Markdown(
            SoftBreak,
        ),
        37..38,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "Content 2",
                ),
            ),
        ),
        42..51,
    ),
    (
        Markdown(
            End(
                Paragraph,
            ),
        ),
        27..52,
    ),
    (
        EndCallout,
        25..52,
    ),
    (
        Markdown(
            Start(
                Paragraph,
            ),
        ),
        56..65,
    ),
    (
        Markdown(
            Text(
                Borrowed(
                    "Content 3",
                ),
            ),
        ),
        56..65,
    ),
    (
        Markdown(
            End(
                Paragraph,
            ),
        ),
        56..65,
    ),
    (
        EndCallout,
        0..65,
    ),
]
